--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/mythmon/corsica-google-presentation",
   "dependencies": {
     "acorn": "^0.6.0",
-    "cheerio": "^0.17.0",
-    "request": "^2.38.0"
+    "cheerio": "^0.17.0"
   }
 }
