--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "homepage": "https://github.com/mythmon/corsica-google-presentation",
   "dependencies": {
     "acorn": "^0.6.0",
-    "cheerio": "^0.17.0"
+    "cheerio": "^1.0.0-rc.6"
   }
 }
