acord-walk is its own library now

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/mythmon/corsica-google-presentation",
   "dependencies": {
     "acorn": "^8.1.1",
+    "acorn-walk": "^8.0.2",
     "cheerio": "^1.0.0-rc.6"
   },
   "devDependencies": {
